force-app/main/default/objects/Sales_History__c/Sales_History__c.object-meta.xml
<CustomObject>
    <label>Sales</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Sales History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>