force-app/main/default/objects/Sales_History__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <label>Battery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>