force-app/main/default/objects/Sales_History__c/fields/Cardboard_Stickers__c.field-meta.xml
<CustomField>
    <fullName>Cardboard_Stickers__c</fullName>
    <label>Cardboard Stickers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>