force-app/main/default/objects/Sales_History__c/fields/Confidential_Sales__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Sales__c</fullName>
    <label>Confidential Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>