force-app/main/default/objects/Sales_History__c/fields/Recycling_Sales__c.field-meta.xml
<CustomField>
    <fullName>Recycling_Sales__c</fullName>
    <label>Recycling Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>