force-app/main/default/objects/Sales_History__c/fields/Toner_Sales__c.field-meta.xml
<CustomField>
    <fullName>Toner_Sales__c</fullName>
    <label>Toner Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>