force-app/main/default/objects/Sales_History__c/fields/WEEE_Sales__c.field-meta.xml
<CustomField>
    <fullName>WEEE_Sales__c</fullName>
    <label>WEEE Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>